4.5 -> 5.0:
    - jbj: fixup %patchNN rewrite.
    - jbj: add osgi automagic dependency extractors <klee@redhat.com>.
    - jbj: debugedit warning removal <pmatlai@redhat.com>.
    - jbj: free 5 bits in FCOLOR_e for future use. 
    - jbj: add arbitrary tag strings to header metadata.
    - mgh: transform %patchNN to %patch -P NN
    - jbj: add mono automagic dependency extractors.
    - jbj: insure that RPMFILE_EXISTS is set for %config files.
    - jbj: revert the _GetPass() hack-a-round.
    - jbj: set a default 0022 umask value always (#83006).
    - rse: remove the already obsolete rpm.c
    - rse/jbj: eliminated all major compile-time warnings
    - rse: cleanup API by changing argument 2 of rpmDigestFinal() from "void **" to "void *"
    - rse: make directory checking for %docdir more strict to avoid false positives
    - jbj: perform fsync(2) before closing installed file.
    - jbj: default RPMCANONCOLOR to 3 everywhere but ia64 and mips*.
    - rse: remove now unused LIBDIR (--with-path-lib) from Autoconf and rename --with-path-usrlib to --with-path-lib
    - jbj: hardwire _GetPass() to avoid --addsign (*Getpass) segfault for now.
    - jbj: eliminate rpmrc.in file itself.
    - jbj: revert routines that were re-added for ABI compat after rpm-4.4.7.
    - jbj: eliminate the voo-doo asm arch identification.
    - jbj: eliminate recursive parser helpers.
    - jbj: expunge every occurence of Rcfiles.
    - jbj: eliminate rcfile reading everywhere.
    - jbj: eliminate last known internal usage of rpmrc files.
    - jbj: generate per-platform macros for major CPU-linux platforms.
    - mgh: Stop the python module from using rpmrc files
    - mgh: Change python configuration to allow for --with-python 2.x, 2.4 or 2.5. (no value will scan as it previously did)
    - jbj: parameterize upgrade/obsoletes tag. Panu's Big Mistake imho.
    - jbj: reset errno to 0 in rpmgiOpen to eliminate false ENOENT failure.