@@ -387,10 +387,11 @@ package or when debugging this package.\
 # a file and aplly using patch(1).
 #
 
-%Xpatch(b:p:P:REz:F:d:) \
+%patch(b:p:P:REz:F:d:) \
 %define patch_file	%{P:%{-P:%{-P*}}%{!-P:%%PATCH0}} \
 %define patch_suffix	%{!-z:%{-b:-b --suffix %{-b*}}}%{!-b:%{-z:--suffix %{-z*}}}%{!-z:%{!-b: }}%{-z:%{-b:%{error:Can't specify both -z(%{-z*}) and -b(%{-b*})}}} \
-  %{uncompress:%patch_file} | %{__patch} %{-p:-p%{-p*}} %{-F:-F%{-F*}} %{-d:-d%{-d*}} %patch_suffix %{-R} %{-E}
+  echo "Patch #%{-P:%{-P*}}%{!-P:0} (%{basename:%patch_file}):" \
+  %{uncompress:%patch_file} | %{__patch} -s %{-p:-p%{-p*}} %{-F:-F%{-F*}} %{-d:-d%{-d*}} %patch_suffix %{-R} %{-E}
 
 #
 # Script gets packaged file list on input and buildroot as first parameter.
