@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: rip compiled in %patch, breaking remote patch fetching.
     - jbj: fixup %patchNN rewrite.
     - jbj: add osgi automagic dependency extractors <klee@redhat.com>.
     - jbj: debugedit warning removal <pmatlai@redhat.com>.
